Add tests for flattenable fields and AOT
AOT compiled methods that use classes that could contain
flattenable null-restricted fields must only be used at AOT load time
if the positions and sizes of any flattened fields match.

Create tests involving such classes, creating several distinct shared
classes caches that contain AOT compiled methods built with different
combinations of classes with flattened fields and sizes of value type
instances, and then run tests using those different caches against all
those same combinations of classes.

The tests examine the output of the compiler's verbose log to verify
that AOT loads are successful when the positions and sizes of flattened
fields match and that AOT loads fail otherwise.

Signed-off-by:  Henry Zongaro <zongaro@ca.ibm.com>